--- a/styleportofolio.css
+++ b/styleportofolio.css
@@ -1,40 +1,46 @@
 .tugas{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(6, 93, 128);
+    background-color: #FFE3B0;
     margin-bottom: 30px;
-    border: 1px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    padding: 10px;
 }
 .data{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(0, 43, 59);
     margin-bottom: 30px;
-    border: 2px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    background-color: #FFE3B0;
+    padding: 5px;
 }
 .hobi{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(0, 43, 59);
     margin-bottom: 30px;
-    border: 2px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    background-color: #FFE3B0;
+    padding: 5px;
 }
 .kemampuan{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(0, 43, 59);
     margin-bottom: 30px;
-    border: 2px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    background-color: #FFE3B0;
+    padding: 5px;
 }
 .pengalaman{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(0, 43, 59);
     margin-bottom: 30px;
-    border: 2px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    background-color: #FFE3B0;
+    padding: 5px;
 }
 .karakter{
-    color: rgb(33, 36, 184);
-    background-color: rgb(255, 253, 139);
+    color:rgb(0, 43, 59);
     margin-bottom: 30px;
-    border: 2px solid rgb(66, 123, 170);
+    border: 1px solid #FFB677;
+    background-color: #FFE3B0;
+    padding: 5px;
 }
 .foto{
     margin: 10px;
-    border: 5px solid rgb(255, 253, 139);
+    border: 3px solid #000000
     }
