--- a/styleportofolio.css
+++ b/styleportofolio.css
@@ -44,3 +44,19 @@
     margin: 10px;
     border: 3px solid #000000
     }
+    /* Default (Smartphone) */
+.tugas > h1{
+    width: 100%;
+}
+/* Default (Tablet) */
+@media (min-width: 760px;){
+    .tugas > h1{
+        width: 80%;
+    }
+}
+/* Default (PC) */
+@media (min-width: 992px;){
+    .tugas > h1{
+        width: 60%;
+    }
+}
