--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     border: 1px solid #FFB677;
     padding: 10px;
 }
+.contact {
+    color:rgb(6, 93, 128);
+    background-color: #FFE3B0;
+    margin-bottom: 30px;
+    border: 1px solid #FFB677;
+    padding: 10px;
+}
 .gambar {
     margin: 10px;
     border: 3px solid #000000
